# QuarkEngine

./: .gitignore  CMakeLists.txt  run.sh
.github/workflows/: build.yml
quark-libs/imgui/include/: rlImGui.cpp
src/: editor.cpp  main.cpp  models.cpp  scene.cpp  tex.cpp
src/headers/: editor.h  entity.h  models.h  scene.h  tex.h
